# kubeconfig-merger

./: README.md  pyproject.toml
kubecontext_merger/: __main__.py  main.py  utils.py
tests/: test_utils.py
